Extract common parts to separate project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /PavEcsGame/bin
 /PavEcsGame.Components/bin
 /PavEcsGame.Components/obj
+/PavEcsLiteGame/obj
+/PaveEcsGame.Common/bin
+/PaveEcsGame.Common/obj
