--- a/PavEcsGame/PavEcsGame.csproj
+++ b/PavEcsGame/PavEcsGame.csproj
@@ -10,18 +10,7 @@
     <ProjectReference Include="..\ecs-types\Leopotam.Ecs.Types.csproj" />
     <ProjectReference Include="..\ecs\Leopotam.Ecs.csproj" />
     <ProjectReference Include="..\PavEcsGame.Components\PavEcsGame.Components.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Data\map1.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\map2.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\map3.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\PaveEcsGame.Common\PaveEcsGame.Common.csproj" />
   </ItemGroup>
 
 </Project>
