Move spec functionality to separate proj

--- a/PavEcsLiteGame/PavEcsGame.Lite.csproj
+++ b/PavEcsLiteGame/PavEcsGame.Lite.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\ecs-types\Leopotam.Ecs.Types.csproj" />
     <ProjectReference Include="..\ecslite\Leopotam.EcsLite.csproj" />
     <ProjectReference Include="..\PavEcsGame.Components\PavEcsGame.Components.csproj" />
+    <ProjectReference Include="..\PavEcsSpec.EcsLite\PavEcsSpec.EcsLite.csproj" />
     <ProjectReference Include="..\PaveEcsGame.Common\PaveEcsGame.Common.csproj" />
   </ItemGroup>
 
