--- a/PavEcsSpec.EcsLite/PavEcsSpec.EcsLite.csproj
+++ b/PavEcsSpec.EcsLite/PavEcsSpec.EcsLite.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ecslite\Leopotam.EcsLite.csproj" />
   </ItemGroup>
 
