Add MoveCommand instead of direct speed change

--- a/PavEcsLiteGame/PavEcsGame.Lite.csproj
+++ b/PavEcsLiteGame/PavEcsGame.Lite.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>PavEcsGame.Lite</AssemblyName>
     <RootNamespace>PavEcsGame</RootNamespace>
-    <StartupObject>PavEcsLiteGame.Program</StartupObject>
+    <StartupObject>PavEcsGame.Program</StartupObject>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
