--- a/PavEcsLiteGame/PavEcsGame.Lite.csproj
+++ b/PavEcsLiteGame/PavEcsGame.Lite.csproj
@@ -14,7 +14,8 @@
     <ProjectReference Include="..\ecslite\Leopotam.EcsLite.csproj" />
     <ProjectReference Include="..\PavEcsGame.Components\PavEcsGame.Components.csproj" />
     <ProjectReference Include="..\PavEcsSpec.EcsLite\PavEcsSpec.EcsLite.csproj" />
-    <ProjectReference Include="..\PaveEcsGame.Common\PaveEcsGame.Common.csproj" />
+    <ProjectReference Include="..\PavEcsGame.Common\PavEcsGame.Common.csproj" />
   </ItemGroup>
+  
 
 </Project>
