--- a/PavEcsGame/PavEcsGame.csproj
+++ b/PavEcsGame/PavEcsGame.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>PavEcsGame</RootNamespace>
   </PropertyGroup>
 
@@ -10,7 +10,7 @@
     <ProjectReference Include="..\ecs-types\Leopotam.Ecs.Types.csproj" />
     <ProjectReference Include="..\ecs\Leopotam.Ecs.csproj" />
     <ProjectReference Include="..\PavEcsGame.Components\PavEcsGame.Components.csproj" />
-    <ProjectReference Include="..\PaveEcsGame.Common\PaveEcsGame.Common.csproj" />
+    <ProjectReference Include="..\PavEcsGame.Common\PaveEcsGame.Common.csproj" />
   </ItemGroup>
 
 </Project>
