--- a/PavEcsLiteGame/PavEcsGame.Lite.csproj
+++ b/PavEcsLiteGame/PavEcsGame.Lite.csproj
@@ -17,5 +17,11 @@
     <ProjectReference Include="..\PavEcsGame.Common\PavEcsGame.Common.csproj" />
   </ItemGroup>
   
+  <ItemGroup>
+    <!--Note that this is not a "normal" ProjectReference.
+         It needs the additional 'OutputItemType' and 'ReferenceOutputAssmbly' attributes.-->
+    <ProjectReference Include="..\PavEcsSpec.Generators\PavEcsSpec.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <!--<ProjectReference Include="..\PavEcsSpec.Generators\bin\Debug\netstandard2.0\PavEcsSpec.Generators.dll" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+  </ItemGroup>
 
 </Project>
