--- a/PavEcsGame.Common/PavEcsGame.Common.csproj
+++ b/PavEcsGame.Common/PavEcsGame.Common.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ecs-types\Leopotam.Ecs.Types.csproj" />
+    <ProjectReference Include="..\leo\Leopotam.EcsLite.csproj" />
     <ProjectReference Include="..\PavEcsGame.Components\PavEcsGame.Components.csproj" />
   </ItemGroup>
 
